|   *Updated:* | /{{{modification-time(%Y-%m-%d %H:%M:%S)}}}/ |
| *Generated:* | /{{{time(%Y-%m-%d %H:%M:%S)}}}/              |
#+ATTR_HTML: :align center
Copyright \copy {{{time(%Y)}}} Mitch Richling. All rights reserved.

#+TOC: headlines 5

* Changes On HEAD Since Last Release
:PROPERTIES:
:CUSTOM_ID: latest
:END:
  - Fixed Bugs
    - Removed all_gtests from cmake list.
  - Known Issues
    - N/A
  - API breaking Changes
    - mjr::ramCanvasTpl::readTIFFfile now has new exit codes (23 & 24 -- see below).
    - Bumped C++ standard up to 23 (from 20) for compatibility with MRMathCPP.
  - Deprecated functionality
    - N/A
  - New functionality
    - MSVC:
      - With the switch to GTest, the unit tests are simple to run against MSVC.
      - Removed "experimental" warning when configuring with MSVC.
      - Added hints for using MSVC
      - Updated wMean tests to avoid integer cases on cast.
    - mjr::ramCanvasTpl::readTIFFfile: Added error 23: Image is tiled.
    - mjr::ramCanvasTpl::readTIFFfile: Added error 24: Image has a palette.
    - New method colorTpl::channelArithFlt2clrChan
    - Added warning to wMean method regarding the vulgarities of floating point arithmetic and casts
    - Added more compilers to CMakeLists.txt
      - NVHPC
      - IntelLLVM
    - Pixel Corners
      - Moved from experimental to production
      - Functions: int2realSideX, int2realSideY, int2realCorner
      - Example: demo_corners.cpp
    - Added mjr::ramCanvasTpl::getPxColorWrap()
    - Added mjr::ramCanvasTpl::getPxColorChanWrap()
  - Documentation
    - Added test coverage document
    - Updated all the docs to reflect GTest & C++23 switch.
  - Examples
    - New
      - demo_corners.cpp
      - heart2025.cpp
      - duck.cpp
      - heartFrac.cpp
    - Updated
      - N/A
  - Miscellaneous
    - Broke utest_colorTpl.cpp up into different files
    - Added IncludeMRMathCPPLib.cmake code
    - Updated version of configure.sh
    - Updated mrw2any.sh & 
