@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-02-12 Wed 14:16 -->
+<!-- 2025-02-13 Thu 15:15 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-02-12 14:16:05</i></td>
+<td class="org-left"><i>2025-02-13 15:09:14</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-02-12 14:16:11</i></td>
+<td class="org-left"><i>2025-02-13 15:15:29</i></td>
 </tr>
 </tbody>
 </table>
@@ -284,6 +284,8 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>Fixed Bugs
 <ul class="org-ul">
 <li>Removed all_gtests from cmake list.</li>
+<li>scaleUpProximal, scaleDown1pt, scaleDownMean, scaleDownMax: Now NOP if xfactor &lt;= 1</li>
+<li>scaleDown1pt, scaleDownMean, scaleDownMax: Now NOP if xfactor &gt; numPixX or numPixY</li>
 </ul></li>
 <li>Known Issues
 <ul class="org-ul">
